@@ -41,6 +41,7 @@ libmikmod_la_SOURCES = \
 		drivers/drv_nos.c \
 		drivers/drv_openal.c \
 		drivers/drv_os2.c \
+		drivers/drv_osles.c \
 		drivers/drv_oss.c \
 		drivers/drv_osx.c \
 		drivers/drv_pulseaudio.c \
