@@ -1,0 +1,6 @@
+/* Customized config.h for Android builds. */
+
+#define DRV_OSLES 1
+
+#define HAVE_UNISTD_H 1
+#define HAVE_FCNTL_H 1
