@@ -1,0 +1,3 @@
+APP_PLATFORM := android-9
+APP_ABI := armeabi armeabi-v7a
+
