@@ -1,3 +1,12 @@
+Summary of changes between libmikmod 3.3.6 and libmikmod 3.3.7:
+========================================================================
+
+libmikmod v3.3.7 was released on XX-XXX-XXXX.
+
+- Android support, thanks to Radovan Cervenka, with the OpenSL ES
+  driver adapted from the old libmikmod-android project.
+
+
 Summary of changes between libmikmod 3.3.5 and libmikmod 3.3.6:
 ========================================================================
 
